--- a/package.yaml
+++ b/package.yaml
@@ -21,66 +21,66 @@ extra-doc-files:
 #source-repository head
 #    type:     git
 #    location: https://github.com/ndmitchell/hoogle.git
-dependencies:
-    -  QuickCheck
-    -  aeson >= 1.4.3.0
-    -  base >= 4.9 && < 5
-    -  blaze-html
-    -  blaze-markup
-    -  binary
-    -  bytestring >= 0.10.2.0
-    -  cmdargs
-    -  conduit >= 1.3.0
-    -  conduit-extra >= 1.2.3.2
-    -  containers >= 0.5
-    -  crypton-connection
-    -  deepseq
-    -  directory
-    -  extra >= 1.6.6
-    -  filepath
-    -  foundation >= 0.0.13
-    -  old-locale
-    -  hashable
-    -  haskell-src-exts >= 1.22 && < 1.24
-    -  http-conduit >= 2.3
-    -  http-types
-    -  js-flot
-    -  js-jquery
-    -  mmap
-    -  process-extras
-    -  resourcet
-    -  safe >= 0.3.20
-    -  storable-tuple
-    -  tar
-    -  template-haskell
-    -  text
-    -  time >= 1.5
-    -  transformers
-    -  uniplate
-    -  utf8-string
-    -  vector
-    -  wai
-    -  wai-logger
-    -  warp
-    -  warp-tls
-    -  zlib
+
+#dependencies:
 
 internal-libraries:
 
     custom-hoogle:
         source-dirs  :  src-hoogle
-        dependencies :  custom-hpack
         language     :  Haskell2010
         c-sources    :  cbits/text_search.c
         include-dirs :  cbits
         cc-options   :  -std=c99
         ghc-options  :  -fno-state-hack
-
         exposed-modules:
           - Hoogle
         generated-other-modules: 
           - Paths_stack_hoogle
-
+        dependencies :  
+          - QuickCheck
+          - aeson 
+          - base
+          - blaze-html
+          - blaze-markup
+          - binary
+          - bytestring 
+          - cmdargs
+          - conduit 
+          - conduit-extra 
+          - containers 
+          - crypton-connection
+          - deepseq
+          - directory
+          - extra 
+          - filepath
+          - foundation 
+          - old-locale
+          - hashable
+          - haskell-src-exts 
+          - http-conduit 
+          - http-types
+          - js-flot
+          - js-jquery
+          - mmap
+          - process-extras
+          - resourcet
+          - safe 
+          - storable-tuple
+          - tar
+          - template-haskell
+          - text
+          - time
+          - transformers
+          - uniplate
+          - utf8-string
+          - vector
+          - wai
+          - wai-logger
+          - warp
+          - warp-tls
+          - zlib
+          - hpack
 
 executables:
     stack-hoogle:             
@@ -89,5 +89,5 @@ executables:
         ghc-options:        -threaded
 
         dependencies:
-            - base > 4 && < 5
+            - base
             - custom-hoogle
